--- a/page7.html
+++ b/page7.html
@@ -107,7 +107,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
     
      
 
