--- a/page8.html
+++ b/page8.html
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="content2 mbr-section article cid-s77Ddkj9bQ" id="content2-s">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="content2 mbr-section article cid-s77Ddkj9bQ" id="content2-s">
     
      
 
@@ -117,7 +117,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                     Our Address</h2>
             </div>
             <div class="mbr-col-md-12 map-box">
-                <div class="google-map"><amp-iframe src="undefined" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
+                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJI4EY0uHaxWsRcmqMPqBPmb0" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
