create github pages

--- a/page1.html
+++ b/page1.html
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="content2 mbr-section article cid-s741qPBFGl" id="content2-k">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="content2 mbr-section article cid-s741qPBFGl" id="content2-k">
     
      
 
@@ -102,7 +102,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 class="mbr-fonts-style mbr-section-title mbr-light display-1"><strong>
                     Parkhurst Depot</strong></h3>
-                <p class="mbr-text mbr-fonts-style display-7">Kanga Bins Depot, 334 Leichhardt Street<br><strong>MON – FRI: 9:30am – 4:30pm  |  SAT: 9am – 1pm</strong></p>
+                <p class="mbr-text mbr-fonts-style display-7">Kanga Bins Depot, 334 Leichhardt Street<br><strong>MON – FRI: 9:30am – 4:30pm </strong><br><strong>SAT: 9am – 1pm</strong></p>
             </div>
         </div>
     </div>
