--- a/page8.html
+++ b/page8.html
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="content2 mbr-section article cid-s77Ddkj9bQ" id="content2-s">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="content2 mbr-section article cid-s77Ddkj9bQ" id="content2-s">
     
      
 
@@ -101,7 +101,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 class="mbr-fonts-style mbr-section-title mbr-light display-1"><strong>Blackwater Depot</strong></h3>
-                <p class="mbr-text mbr-fonts-style display-7">12 Littlefield Street<br><strong>MON, FRI &amp; SAT (Bag drop only): 8am – 1pm, TUE, WED &amp; THURS: 11am – 4pm</strong></p>
+                <p class="mbr-text mbr-fonts-style display-7">12 Littlefield Street<br><strong>MON, FRI &amp; SAT (Bag drop only): 8am – 1pm, </strong><br><strong>TUE, WED &amp; THURS: 11am – 4pm</strong></p>
             </div>
         </div>
     </div>
