--- a/page7.html
+++ b/page7.html
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
     
      
 
@@ -102,7 +102,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 class="mbr-fonts-style mbr-section-title mbr-light display-1"><strong>
                     Capella Depot</strong></h3>
-                <p class="mbr-text mbr-fonts-style display-7">Peak Downs Mechanical, 5 Hibernia Road<br><strong>FRI: 10am – 4:30pm  |  SAT: 9am – 1pm</strong></p>
+                <p class="mbr-text mbr-fonts-style display-7">Peak Downs Mechanical, 5 Hibernia Road<br><strong>FRI: 10am – 4:30pm </strong><br><strong>SAT: 9am – 1pm</strong></p>
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                     Our Address</h2>
             </div>
             <div class="mbr-col-md-12 map-box">
-                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ99V1Ybhsz2sRSXLJZAexPmM" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
+                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ99V1Ybhsz2sRSXLJZAexPmM" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
