--- a/page7.html
+++ b/page7.html
@@ -93,7 +93,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="content2 mbr-section article cid-s79OsnCy4g" id="content2-1a">
     
      
 
