--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header4 cid-s73ROjsubh mbr-fullscreen" id="header4-2">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header4 cid-s73ROjsubh mbr-fullscreen" id="header4-2">
 
     
 
@@ -418,7 +418,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <h3 class="mbr-section-title mbr-fonts-style align-center display-7">Our Email:</h3>
                 <p class="mbr-text mbr-fonts-style align-center display-5"><strong>
-                    refunds@cqcr.com.au
+                    refund@cqcr.com.au
                 </strong></p>
             </div>
         
