create github pages

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="header4 cid-s73ROjsubh mbr-fullscreen" id="header4-2">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="header4 cid-s73ROjsubh mbr-fullscreen" id="header4-2">
 
     
 
@@ -329,7 +329,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <div class="card mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <amp-img src="assets/images/20200811-222529-676x542.jpeg" layout="responsive" height="212" width="338.23361823361824" alt="Mobirise" class="mobirise-loader">
+                        <amp-img src="assets/images/20200811-222534-676x542.jpeg" layout="responsive" height="201" width="337.39285714285717" alt="Mobirise" class="mobirise-loader">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
